parslers-benchmark/src/tests/invalid/semanticErr/pairs/fstNull.wacc
# call fst on a null pair literal 

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int i = fst null;
  println i
end
